# zkPoEX

./: .gitignore  Cargo.toml  DISCLAIMER  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  USAGE.md  assertions.txt  install.sh  justfile  rust-toolchain
bytecode/: Calculator.sol  Exploiter.bin-runtime  Exploiter.sol  Target.bin-runtime  Target.sol  Wrapper.bin-runtime  Wrapper.sol
core/bridge-logic/: Cargo.toml
core/bridge-logic/src/: db.rs  executor.rs  hardfork.rs  lib.rs  state_diff.rs
core/bridge-types/: Cargo.toml
core/bridge-types/src/: constants.rs  conversions.rs  deal.rs  lib.rs  mpt.rs  types.rs
evm-runner/: Cargo.toml
evm-runner/src/: lib.rs  main.rs
guests/: Cargo.toml  build.rs
guests/exploit/: Cargo.toml
guests/exploit/src/: main.rs
guests/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
lib/host-utils/: Cargo.toml
lib/host-utils/src/: cache.rs  compiler.rs  fetcher.rs  lib.rs  preflight.rs  provider.rs  proxy_db.rs  rpc.rs  serialize.rs
methods/guest/: Cargo.toml
pocs/: README.md
pocs/euler_finance/: PoC.sol  README.md  assertions.txt
pocs/parity_wallet/: PoC.sol  README.md  assertions.txt
pocs/sushi_router/: PoC.sol  README.md  assertions.txt
tests/: e2e_simple.sh
tests/fixtures/: MissingOnlyOwner.sol  ReentrancyExploit.sol  SimpleTx.sol
