[package]
name = "evm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc" ]  }
evm = { version = "0.37.0", default-features = false }
primitive-types =  { version = "0.12.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false  }
