[package]
name = "evm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc" ]  }
evm = { version = "0.37.0", default-features = false }
primitive-types =  { version = "0.12.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false  }
sha3 = { version = "0.10.6", default-features = false  }
hex-literal = { version = "0.3.4", default-features = false  }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
