[package]
name = "host-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge-types = { path = "../../core/bridge-types" }
bridge-logic = { path = "../../core/bridge-logic" }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
rkyv = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
revm = { workspace = true, features = ["std"] }
hex = "0.4"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
